# autobenchaudit

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/benchguard/: README.md  audits_to_benchguard_findings.py  run_eval.sh
benchmarks/benchguard/bix_verified50/: BixBench-Verified-50.jsonl  README.md  sample50_comparison.csv
benchmarks/frontier/: benchmark_selection.excalidraw  benchmark_selection.md  benchmark_selection_simple.excalidraw  frontier_model_benchmark_coverage.md
benchmarks/leaderboards/: INDEX.md
benchmarks/leaderboards/aider-polyglot/: README.md  leaderboard.json  refresh.py  rows_index.json
benchmarks/leaderboards/aime2425/: README.md  leaderboard.json  per_task_matrix.json  refresh.py  rows_index.json  tasks.json
benchmarks/leaderboards/dabstep/: README.md  leaderboard.json  refresh.py  rows_index.json
benchmarks/leaderboards/gdpval_aa/: README.md  leaderboard.json  per_task_matrix.json  (+3 more)
benchmarks/multi-domain/: benchmark_categorization.json  benchmark_categorization.md  build_categorization_json.py  ranked_benchmarks_popularity.json
configs/: README.md
configs/harbor/: eval_claude_code_sonnet.yaml
configs/quick/: hle.yaml  reasonif.yaml  terminal_bench_2.yaml
rubrics/: benchmark_rubric.txt  general_rubric.yaml  task_rubric_ambiguity_v3.txt
scripts/: audit_one.sh  batch_static_audit_pipeline.sh  multi_domain_streaming_pipeline.py  multi_domain_streaming_pipeline.sh  sample_tasks.py
src/bench_audit/: __init__.py  agent_cli.py  audit_models.py  audit_protocol.py  cli.py  context.py  progress.py  report.py
(+4319 files in other folders)
